// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert> hook:styler 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.8)",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={Object {}}
      >
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              Array [
                Object {
                  "marginBottom": 16,
                },
                undefined,
              ],
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#191919",
                  "fontFamily": undefined,
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontWeight": "700",
                },
                undefined,
                Object {
                  "marginBottom": 16,
                },
              ]
            }
          >
            Lorem Ipsum is simply dummy text...
          </Text>
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "height": "auto",
                  "width": "100%",
                },
                Object {
                  "alignItems": "center",
                },
                Object {
                  "justifyContent": "flex-start",
                },
                undefined,
                Object {
                  "marginTop": 16,
                },
                undefined,
              ]
            }
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              pointerEvents="none"
              style={
                Array [
                  undefined,
                  Array [
                    Object {
                      "alignContent": "center",
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                      "width": "auto",
                    },
                    undefined,
                    Object {
                      "height": 48,
                      "paddingHorizontal": 16,
                    },
                    undefined,
                    Object {
                      "backgroundColor": "#62e6ac",
                      "borderRadius": 0,
                    },
                    Object {
                      "flex": 1,
                    },
                  ],
                  Array [
                    Object {
                      "alignContent": "center",
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                      "width": "auto",
                    },
                    undefined,
                    Object {
                      "height": 48,
                      "paddingHorizontal": 16,
                    },
                    undefined,
                    Object {
                      "backgroundColor": "#62e6ac",
                      "borderRadius": 0,
                    },
                    Object {
                      "flex": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                      "height": "auto",
                      "width": "100%",
                    },
                    Object {
                      "alignItems": "center",
                    },
                    Object {
                      "justifyContent": "center",
                    },
                    Object {
                      "width": "auto",
                    },
                    undefined,
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 0,
                      "bottom": 0,
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    0,
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "height": 0,
                      "opacity": 0,
                      "width": 0,
                      "zIndex": 0,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Alert> renders 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.8)",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={Object {}}
      >
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              Array [
                undefined,
              ],
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#191919",
                  "fontFamily": undefined,
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontWeight": "700",
                },
                undefined,
                Object {
                  "marginBottom": 16,
                },
              ]
            }
          >
            Lorem Ipsum is simply dummy text...
          </Text>
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "height": "auto",
                  "width": "100%",
                },
                Object {
                  "alignItems": "center",
                },
                Object {
                  "justifyContent": "flex-start",
                },
                undefined,
                Object {
                  "marginTop": 16,
                },
                undefined,
              ]
            }
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              pointerEvents="none"
              style={
                Array [
                  undefined,
                  Array [
                    Object {
                      "alignContent": "center",
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                      "width": "auto",
                    },
                    undefined,
                    Object {
                      "height": 48,
                      "paddingHorizontal": 16,
                    },
                    undefined,
                    Object {
                      "backgroundColor": "#62e6ac",
                      "borderRadius": 0,
                    },
                    Object {
                      "flex": 1,
                    },
                  ],
                  Array [
                    Object {
                      "alignContent": "center",
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                      "width": "auto",
                    },
                    undefined,
                    Object {
                      "height": 48,
                      "paddingHorizontal": 16,
                    },
                    undefined,
                    Object {
                      "backgroundColor": "#62e6ac",
                      "borderRadius": 0,
                    },
                    Object {
                      "flex": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                      "height": "auto",
                      "width": "100%",
                    },
                    Object {
                      "alignItems": "center",
                    },
                    Object {
                      "justifyContent": "center",
                    },
                    Object {
                      "width": "auto",
                    },
                    undefined,
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 0,
                      "bottom": 0,
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    0,
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "height": 0,
                      "opacity": 0,
                      "width": 0,
                      "zIndex": 0,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Alert> when {accept} 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 1,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.8)",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={
          Object {
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              Array [
                undefined,
              ],
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#191919",
                  "fontFamily": undefined,
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontWeight": "700",
                },
                undefined,
                Object {
                  "marginBottom": 16,
                },
              ]
            }
          >
            Lorem Ipsum is simply dummy text...
          </Text>
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "height": "auto",
                  "width": "100%",
                },
                Object {
                  "alignItems": "center",
                },
                Object {
                  "justifyContent": "flex-start",
                },
                undefined,
                Object {
                  "marginTop": 16,
                },
                undefined,
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onLayout={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              pointerEvents="box-only"
              style={
                Array [
                  undefined,
                  Array [
                    Object {
                      "alignContent": "center",
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                      "width": "auto",
                    },
                    undefined,
                    Object {
                      "height": 48,
                      "paddingHorizontal": 16,
                    },
                    undefined,
                    Object {
                      "backgroundColor": "#62e6ac",
                      "borderRadius": 0,
                    },
                    Object {
                      "flex": 1,
                    },
                  ],
                  Array [
                    Object {
                      "alignContent": "center",
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                      "width": "auto",
                    },
                    undefined,
                    Object {
                      "height": 48,
                      "paddingHorizontal": 16,
                    },
                    undefined,
                    Object {
                      "backgroundColor": "#62e6ac",
                      "borderRadius": 0,
                    },
                    Object {
                      "flex": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                      "height": "auto",
                      "width": "100%",
                    },
                    Object {
                      "alignItems": "center",
                    },
                    Object {
                      "justifyContent": "center",
                    },
                    Object {
                      "width": "auto",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#191919",
                        "fontFamily": undefined,
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontSize": 16,
                        "lineHeight": 24,
                      },
                      undefined,
                      undefined,
                      Object {
                        "color": "#ffffff",
                      },
                      Array [
                        Object {
                          "fontWeight": "700",
                          "paddingHorizontal": 8,
                        },
                        false,
                      ],
                    ]
                  }
                >
                  Accept
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 0,
                      "bottom": 0,
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    0,
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "height": 0,
                      "opacity": 0,
                      "width": 0,
                      "zIndex": 0,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Alert> when {cancel} 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.8)",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={Object {}}
      >
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              Array [
                undefined,
              ],
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#191919",
                  "fontFamily": undefined,
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontWeight": "700",
                },
                undefined,
                Object {
                  "marginBottom": 16,
                },
              ]
            }
          >
            Lorem Ipsum is simply dummy text...
          </Text>
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "height": "auto",
                  "width": "100%",
                },
                Object {
                  "alignItems": "center",
                },
                Object {
                  "justifyContent": "flex-start",
                },
                undefined,
                Object {
                  "marginTop": 16,
                },
                undefined,
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onLayout={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              pointerEvents="box-only"
              style={
                Array [
                  undefined,
                  Array [
                    Object {
                      "alignContent": "center",
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                      "width": "auto",
                    },
                    undefined,
                    Object {
                      "height": 48,
                      "paddingHorizontal": 16,
                    },
                    undefined,
                    Object {
                      "backgroundColor": "#62e6ac",
                      "borderRadius": 0,
                    },
                    Object {
                      "flex": 1,
                    },
                  ],
                  Array [
                    Object {
                      "alignContent": "center",
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                      "width": "auto",
                    },
                    undefined,
                    Object {
                      "height": 48,
                      "paddingHorizontal": 16,
                    },
                    undefined,
                    Object {
                      "backgroundColor": "#62e6ac",
                      "borderRadius": 0,
                    },
                    Object {
                      "flex": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                      "height": "auto",
                      "width": "100%",
                    },
                    Object {
                      "alignItems": "center",
                    },
                    Object {
                      "justifyContent": "center",
                    },
                    Object {
                      "width": "auto",
                    },
                    undefined,
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 0,
                      "bottom": 0,
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    0,
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "height": 0,
                      "opacity": 0,
                      "width": 0,
                      "zIndex": 0,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Alert> when {caption} 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 1,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.8)",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={
          Object {
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              Array [
                undefined,
              ],
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#191919",
                  "fontFamily": undefined,
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontWeight": "700",
                },
                undefined,
                Object {
                  "marginBottom": 16,
                },
              ]
            }
          >
            Lorem Ipsum is simply dummy text...
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#191919",
                  "fontFamily": undefined,
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            ... of the printing and typesetting industry
          </Text>
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "height": "auto",
                  "width": "100%",
                },
                Object {
                  "alignItems": "center",
                },
                Object {
                  "justifyContent": "flex-start",
                },
                undefined,
                Object {
                  "marginTop": 16,
                },
                undefined,
              ]
            }
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              pointerEvents="none"
              style={
                Array [
                  undefined,
                  Array [
                    Object {
                      "alignContent": "center",
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                      "width": "auto",
                    },
                    undefined,
                    Object {
                      "height": 48,
                      "paddingHorizontal": 16,
                    },
                    undefined,
                    Object {
                      "backgroundColor": "#62e6ac",
                      "borderRadius": 0,
                    },
                    Object {
                      "flex": 1,
                    },
                  ],
                  Array [
                    Object {
                      "alignContent": "center",
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                      "width": "auto",
                    },
                    undefined,
                    Object {
                      "height": 48,
                      "paddingHorizontal": 16,
                    },
                    undefined,
                    Object {
                      "backgroundColor": "#62e6ac",
                      "borderRadius": 0,
                    },
                    Object {
                      "flex": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                      "height": "auto",
                      "width": "100%",
                    },
                    Object {
                      "alignItems": "center",
                    },
                    Object {
                      "justifyContent": "center",
                    },
                    Object {
                      "width": "auto",
                    },
                    undefined,
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 0,
                      "bottom": 0,
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    0,
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "height": 0,
                      "opacity": 0,
                      "width": 0,
                      "zIndex": 0,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Alert> when {color} 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.8)",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={Object {}}
      >
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              Array [
                undefined,
              ],
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#191919",
                  "fontFamily": undefined,
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontWeight": "700",
                },
                undefined,
                Object {
                  "marginBottom": 16,
                },
              ]
            }
          >
            Lorem Ipsum is simply dummy text...
          </Text>
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "height": "auto",
                  "width": "100%",
                },
                Object {
                  "alignItems": "center",
                },
                Object {
                  "justifyContent": "flex-start",
                },
                undefined,
                Object {
                  "marginTop": 16,
                },
                undefined,
              ]
            }
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              pointerEvents="none"
              style={
                Array [
                  undefined,
                  Array [
                    Object {
                      "alignContent": "center",
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                      "width": "auto",
                    },
                    undefined,
                    Object {
                      "height": 48,
                      "paddingHorizontal": 16,
                    },
                    undefined,
                    Object {
                      "backgroundColor": "#191919",
                      "borderRadius": 0,
                    },
                    Object {
                      "flex": 1,
                    },
                  ],
                  Array [
                    Object {
                      "alignContent": "center",
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                      "width": "auto",
                    },
                    undefined,
                    Object {
                      "height": 48,
                      "paddingHorizontal": 16,
                    },
                    undefined,
                    Object {
                      "backgroundColor": "#191919",
                      "borderRadius": 0,
                    },
                    Object {
                      "flex": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                      "height": "auto",
                      "width": "100%",
                    },
                    Object {
                      "alignItems": "center",
                    },
                    Object {
                      "justifyContent": "center",
                    },
                    Object {
                      "width": "auto",
                    },
                    undefined,
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 0,
                      "bottom": 0,
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    0,
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "height": 0,
                      "opacity": 0,
                      "width": 0,
                      "zIndex": 0,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Alert> when {visible} (false) 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.8)",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={
          Object {
            "transform": Array [
              Object {
                "translateY": 1334,
              },
            ],
          }
        }
      >
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              Array [
                undefined,
              ],
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#191919",
                  "fontFamily": undefined,
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontWeight": "700",
                },
                undefined,
                Object {
                  "marginBottom": 16,
                },
              ]
            }
          >
            Lorem Ipsum is simply dummy text...
          </Text>
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "height": "auto",
                  "width": "100%",
                },
                Object {
                  "alignItems": "center",
                },
                Object {
                  "justifyContent": "flex-start",
                },
                undefined,
                Object {
                  "marginTop": 16,
                },
                undefined,
              ]
            }
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              pointerEvents="none"
              style={
                Array [
                  undefined,
                  Array [
                    Object {
                      "alignContent": "center",
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                      "width": "auto",
                    },
                    undefined,
                    Object {
                      "height": 48,
                      "paddingHorizontal": 16,
                    },
                    undefined,
                    Object {
                      "backgroundColor": "#62e6ac",
                      "borderRadius": 0,
                    },
                    Object {
                      "flex": 1,
                    },
                  ],
                  Array [
                    Object {
                      "alignContent": "center",
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                      "width": "auto",
                    },
                    undefined,
                    Object {
                      "height": 48,
                      "paddingHorizontal": 16,
                    },
                    undefined,
                    Object {
                      "backgroundColor": "#62e6ac",
                      "borderRadius": 0,
                    },
                    Object {
                      "flex": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                      "height": "auto",
                      "width": "100%",
                    },
                    Object {
                      "alignItems": "center",
                    },
                    Object {
                      "justifyContent": "center",
                    },
                    Object {
                      "width": "auto",
                    },
                    undefined,
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 0,
                      "bottom": 0,
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    0,
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "height": 0,
                      "opacity": 0,
                      "width": 0,
                      "zIndex": 0,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;
